export enum EstadoVehiculo{
    "DISPONIBLE",
    "EN ALQUILER",
    "EN MANTENIMIENTO",
    "NECESITA LIMPIEZA"
}