import Cliente from "./cliente";
import { EstadoVehiculo } from "./estado-vehiculo";
import Vehiculo from "./vehiculo";

export default class Reserva {
    private cliente: Cliente;
    private fechaInicio: Date;
    private fechaFin: Date;
    private vehiculo: Vehiculo;
    private kmRecorridos: number = 0;

    constructor(cliente: Cliente, vehiculo: Vehiculo, fechaInicio: Date, fechaFin: Date) {
        this.cliente = cliente;
        this.vehiculo = vehiculo;
        this.fechaInicio = fechaInicio;
        this.fechaFin = fechaFin;
        this.vehiculo.setEstado(EstadoVehiculo["EN ALQUILER"]);
        this.vehiculo.setAlquileresDesdeUltMantenimiento(1);
    }

    public getDiasReservados(): number {
        const msPorDia = 1000 * 60 * 60 * 24;
        return (this.fechaFin.getTime() - this.fechaInicio.getTime()) / msPorDia;
    }

    public setKmRecorridos(km: number) {
        this.kmRecorridos = km;
        this.vehiculo.setKilometraje(km);
    }

    public getKmRecorridos(): number {
        return this.kmRecorridos;
    }

    public getVehiculo(): Vehiculo {
        return this.vehiculo;
    }

    public getCliente(): Cliente {
        return this.cliente;
    }

    public getFechaInicio(): Date {
        return this.fechaInicio;
    }

    public getFechaFin(): Date {
        return this.fechaFin;
    }
}