@startuml Trabajo Practico Alquiler de Autos

enum EstadoVehiculo {
    DISPONIBLE
    EN_ALQUILER
    EN_MANTENIMIENTO
    NECESITA_LIMPIEZA
}

interface IGestorTemporadas {
    + getPorcentajeTemporada(reserva: Reserva): number
}

interface IVerificadorVehiculo {
    + puedeReservarse(vehiculo: Vehiculo): void
}

class GestorTemporadas {
    + getPorcentajeTemporada(reserva:Reserva):number
    + getTemporada(reserva:Reserva)
}

class VerificadorVehiculo {
    + puedeReservarse(vehiculo:Vehiculo):boolean
}

class DriveHub {
    - vehiculos: Vehiculo[]
    - clientes: Cliente[]
    - reservas: Reserva[]
    - verificadorVehiculos: IVerificadorVehiculo

    + ingresarVehiculo(vehiculo: Vehiculo): void
    + ingresarReserva(cliente: Cliente, vehiculo: Vehiculo, fechaInicio: Date, fechaFin: Date): void
    + agregarMantenimientoAVehiculo(vehiculo: Vehiculo, mantenimiento: Mantenimiento): void
    + getReservas(): Reserva[]
    + getVehiculos(): Vehiculo[]
}

class CalculadoraEstadisticas {
    - sistema: DriveHub

    + getVehiculosMasYMenosAlquilados(fechaInicio: Date, fechaFin: Date): {mas: Vehiculo | null, menos: Vehiculo | null}
    + getRentabilidadVehiculos(): {masRentable: Vehiculo | null, menosRentable: Vehiculo | null}
    + getOcupacionFlota(): number
}

abstract class Vehiculo {
    # matricula: number
    # estado: EstadoVehiculo
    # kilometraje: number
    # kilometrajeUltMantenimiento: number
    # alquileresDesdeUltMantenimiento: number
    # fechaUltMantenimiento: Date
    # historialMantenimiento: Mantenimiento[]
    # gestorTemporadas: IGestorTemporadas

    + calcularTarifa(reserva: Reserva): number
    + setMantenimiento(m: Mantenimiento): void
    + getHistorialMantenimiento(): Mantenimiento[]
    + getCostoTotalMantenimientos(): number
    + setEstado(estado: EstadoVehiculo): void
    + getEstado(): EstadoVehiculo
    + setKilometraje(km: number): void
    + getKilometraje(): number
    + setKilometrajeUltMantenimiento(km: number): void
    + getKilometrajeUltMantenimiento(): number
    + setAlquileresDesdeUltMantenimiento(a: number): void
    + getAlquileresDesdeUltMantenimiento(): number
    + setFechaUltMantenimiento(d: Date): void
    + getFechaUltMantenimiento(): Date
    + getMatricula(): number
}

class Compacto extends Vehiculo {
    - tarifaBase: number
    - cargoAdicional: number
    - kmPermitidos: number
    + calcularTarifa(reserva: Reserva): number
}

class Sedan extends Vehiculo {
    - tarifaBase: number
    - cargoAdicional: number
    + calcularTarifa(reserva: Reserva): number
}

class SUV extends Vehiculo {
    - tarifaBase: number
    - cargoAdicional: number
    - cargoFijoSeguro: number
    - kmPermitidos: number
    + calcularTarifa(reserva: Reserva): number
}

class Cliente {
    - dni: number
    - nombre: string
    - telefono: number
}

class Reserva {
    - cliente: Cliente
    - vehiculo: Vehiculo
    - fechaInicio: Date
    - fechaFin: Date
    - kmRecorridos: number

    + getDiasReservados(): number
    + setKmRecorridos(km: number): void
    + getKmRecorridos(): number
    + getVehiculo(): Vehiculo
    + getCliente(): Cliente
    + getFechaInicio(): Date
    + getFechaFin(): Date
}

class Mantenimiento {
    - fecha: Date
    - costo: number
    - descripcion: string

    + getFecha(): Date
    + getCosto(): number
    + getDescripcion(): string
}

IGestorTemporadas <|.. GestorTemporadas
IVerificadorVehiculo <|.. VerificadorVehiculo

DriveHub --> IVerificadorVehiculo
DriveHub *-- Reserva
DriveHub o-- Vehiculo
DriveHub o-- Cliente

Reserva --> Vehiculo
Reserva --> Cliente
Vehiculo o-- Mantenimiento
Vehiculo --> IGestorTemporadas

CalculadoraEstadisticas --> DriveHub

@enduml
